@@ -76,6 +76,15 @@ application {
     mainClass = 'megamek.MegaMek'
 }
 
+applicationDefaultJvmArgs = [
+        '-Xmx4096m',
+        '--add-opens',
+        'java.base/java.util=ALL-UNNAMED',
+        '--add-opens',
+        'java.base/java.util.concurrent=ALL-UNNAMED',
+        '-Dsun.awt.disablegrab=true'
+]
+
 ext {
     mmJvmOptions = [
             '-Xmx4096m',
@@ -110,6 +119,7 @@ jar {
                 .findAll { it.name.endsWith(".jar") }.collect { "${lib}/${it.name}" }.join(' ')
         attributes "Add-Opens": 'java.base/java.util java.base/java.util.concurrent'
         attributes "Build-Date": LocalDateTime.now()
+        attributes "Sealed": true
     }
 }
 
@@ -232,7 +242,6 @@ tasks.register('createStartScripts', CreateStartScripts) {
     outputDir = startScripts.outputDir
     classpath = jar.outputs.files + files(project.sourceSets.main.runtimeClasspath.files)
             .filter { it.name.endsWith(".jar") }
-    defaultJvmOpts = project.ext.mmJvmOptions
 }
 
 distributions {
